--- a/src/main/resources/static/payment_success.html
+++ b/src/main/resources/static/payment_success.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple SPA</title>
+    <!-- Установка таймера:
+     через 3 секунды отправить клиенту команду перенаправления
+     на веб-адрес /simplespa -->
     <meta http-equiv="Refresh" content="3;URL=/simplespa">
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 </head>
